@@ -1,5 +1,9 @@
 2004-12-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/unsharp.c: code cleanup, no real changes.
+
+2004-12-20  Sven Neumann  <sven@gimp.org>
+
 	* configure.in: bumped version to 2.2.1.
 
 	* plug-ins/FractalExplorer/FractalExplorer.c: applied patch from
